welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: identifier expected but ':' found.
def motif(c:Color d:Color){
                   ^FlowerPot:24: error: ')' expected but '}' found.
}
^